--- a/app/views/footer.htm
+++ b/app/views/footer.htm
@@ -1,8 +1,10 @@
 
     </div>
 
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="../../ui/js/bootstrap.min.js"></script>
+    <!-- <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="../../ui/js/bootstrap.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     </body>
 </html>
