--- a/ui/css/crud.css
+++ b/ui/css/crud.css
@@ -1,98 +1,127 @@
 body {
-			padding-top: 20px;
-			padding-bottom: 60px;
-		  }
+/*padding-top: 20px;*/
+padding-bottom: 60px;
+}
 
-		  /* Custom container */
-		  .container {
-			margin: 0 auto;
-			max-width: 1000px;
-		  }
-		  .container > hr {
-			margin: 60px 0;
-		  }
+.navbar-inverse {
+    background-color: #337ab7;
+    border-color: #2e6da4;
+}
 
-		  /* Main marketing message and sign up button */
-		  .jumbotron {
-			margin: 20px 0;
-			text-align: center;
-		  }
-		  .jumbotron h1 {
-			font-size: 100px;
-			line-height: 1;
-		  }
-		  .jumbotron .lead {
-			font-size: 24px;
-			line-height: 1.25;
-		  }
-		  .jumbotron .btn {
-			font-size: 21px;
-			padding: 14px 24px;
-		  }
+.navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a {
+    color: #fff;
+}
 
-		  /* Supporting marketing content */
-		  .marketing {
-			margin: 60px 0;
-		  }
-		  .marketing p + h4 {
-			margin-top: 28px;
-		  }
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
+    color: #fff;
+    background-color: #286090;
+}
+
+.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover {
+    color: #fff;
+    background-color: #286090;
+}
+
+.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
+    color: #fff;
+    background-color: #286090;
+}
+
+.dropdown-menu>li>a {
+    color: #286090;
+}
 
 
-		  /* Customize the navbar links to be fill the entire space of the .navbar */
-		  .navbar .navbar-inner {
-			padding: 0;
-		  }
-		  .navbar .nav {
-			margin: 0;
-			display: table;
-			width: 100%;
-		  }
-		  .navbar .nav li {
-			display: table-cell;
-			width: 1%;
-			float: none;
-		  }
-		  .navbar .nav li a {
-			font-weight: bold;
-			text-align: center;
-			border-left: 1px solid rgba(255,255,255,.75);
-			border-right: 1px solid rgba(0,0,0,.1);
-		  }
-		  .navbar .nav li:first-child a {
-			border-left: 0;
-			border-radius: 3px 0 0 3px;
-		  }
-		  .navbar .nav li:last-child a {
-			border-right: 0;
-			border-radius: 0 3px 3px 0;
-		  }
-		  
-		  .form-horizontal .control-label {
-			
-			padding-top: 0px;
-			
-			}
-			
-			input[type="text"] {
-				height: auto;
-			}
-			
-			.input-prepend .add-on-area {
-				display: inline-block;
-				width: auto;
-				height: 20px;
-				min-width: 16px;
-				padding: 14px 5px;
-				font-size: 14px;
-				font-weight: normal;
-				line-height: 18px;
-				text-align: center;
-				text-shadow: 0 1px 0 #fff;
-				background-color: #eee;
-				border: 1px solid #ccc;
-			}
-			
-			.input-prepend .add-on {
-				width: 90px;
-			}
+/* Custom container */
+.container {
+margin: 0 auto;
+max-width: 1000px;
+}
+.container > hr {
+margin: 60px 0;
+}
+
+/* Main marketing message and sign up button */
+.container .jumbotron {
+margin: 20px 0;
+text-align: center;
+}
+.container .jumbotron h1 {
+font-size: 100px;
+line-height: 1;
+}
+.container .jumbotron .lead {
+font-size: 24px;
+line-height: 1.25;
+}
+.container .jumbotron .btn {
+font-size: 21px;
+padding: 14px 24px;
+}
+
+/* Supporting marketing content */
+.marketing {
+margin: 60px 0;
+}
+.marketing p + h4 {
+margin-top: 28px;
+}
+
+
+/* Customize the navbar links to be fill the entire space of the .navbar */
+.container .navbar .navbar-inner {
+padding: 0;
+}
+.container .navbar .nav {
+margin: 0;
+display: table;
+width: 100%;
+}
+.container .navbar .nav li {
+display: table-cell;
+width: 1%;
+float: none;
+}
+.container .navbar .nav li a {
+font-weight: bold;
+text-align: center;
+border-left: 1px solid rgba(255,255,255,.75);
+border-right: 1px solid rgba(0,0,0,.1);
+}
+.container .navbar .nav li:first-child a {
+border-left: 0;
+border-radius: 3px 0 0 3px;
+}
+.container .navbar .nav li:last-child a {
+border-right: 0;
+border-radius: 0 3px 3px 0;
+}
+
+.form-horizontal .control-label {
+
+padding-top: 0px;
+
+}
+
+input[type="text"] {
+	height: auto;
+}
+
+.input-prepend .add-on-area {
+	display: inline-block;
+	width: auto;
+	height: 20px;
+	min-width: 16px;
+	padding: 14px 5px;
+	font-size: 14px;
+	font-weight: normal;
+	line-height: 18px;
+	text-align: center;
+	text-shadow: 0 1px 0 #fff;
+	background-color: #eee;
+	border: 1px solid #ccc;
+}
+
+.input-prepend .add-on {
+	width: 90px;
+}
