--- a/app/views/header.htm
+++ b/app/views/header.htm
@@ -58,8 +58,8 @@
                 <h1>{{ @page_head }}</h1>
             </div>
 
-            <include href="user/nav.htm" />
-
+            <!-- <include href="user/nav.htm" />
+ -->
             <check if="{{ @message }}">
             <div class="alert alert-success">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
