--- a/app/views/user/list.htm
+++ b/app/views/user/list.htm
@@ -2,9 +2,9 @@
     <thead>
     <tr>
         <th scope="col">Name</th>
-        <th scope="col">Email</th>
-        <th scope="col">Mobile</th>
-        <th scope="col">Address</th>
+        <th scope="col">Password</th>
+        <th scope="col">Role</th>
+        <th scope="col">Status</th>
         <th scope="col">Action</th>
     </tr>
     </thead>
@@ -12,10 +12,10 @@
     <tbody>
     <repeat group="{{ @users }}" value="{{ @user }}">
         <tr>
-            <td>{{ trim(@user.name) }}</td>
-            <td>{{ trim(@user.email) }}</td>
-            <td>{{ trim(@user.mobile) }}</td>
-            <td>{{ trim(@user.address) }}</td>
+            <td>{{ trim(@user.username) }}</td>
+            <td>{{ trim(@user.password) }}</td>
+            <td>{{ trim(@user.role) }}</td>
+            <td>{{ trim(@user.status) }}</td>
             <td><a href="{{ @BASE.'/user/update/'. @user.id }}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Edit</a>
                 &nbsp; <a href="{{ @BASE.'/user/delete/'. @user.id }}" class="btn btn-danger"><i class="icon-remove icon-white"></i>
                     Delete</a></td>
