--- a/app/views/header.htm
+++ b/app/views/header.htm
@@ -16,38 +16,57 @@
             <div class="navbar-header">
               <a class="navbar-brand" href="{{ @BASE.'/' }}">Battat</a>
             </div>
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="{{ @BASE.'/' }}">Home</a></li>
-              <li><a href="{{ @BASE.'/' }}">Users</a></li>              
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products
-                <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">List Products</a></li>
-                  <li><a href="#">Create Product</a></li>                  
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Brands
-                <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">List Brands</a></li>
-                  <li><a href="#">Create Brand</a></li>                  
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">PackInfos
-                <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">List PackInfos</a></li>
-                  <li><a href="#">Create PackInfo</a></li>                  
-                </ul>
-              </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <!-- <li><a href="{{ @BASE.'/' }}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li> -->
-              <!-- <li><a href="{{ @BASE.'/' }}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> -->
-              <li><a href="{{ @BASE.'/' }}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+            <check if="{{ @page_head != 'Login' }}">
+              <ul class="nav navbar-nav">  
+                <check if="{{ @role == 1 }}">                                 
+                  <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="{{ @BASE.'/' }}">Users
+                    <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="{{ @BASE.'/' }}">List Users</a></li>
+                      <li><a href="{{ @BASE.'/user/create' }}">Create User</a></li>                  
+                    </ul>
+                  </li>  
+                </check>            
+                <li class="dropdown">
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products
+                  <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">List Products</a></li>
+                    <check if="{{ @role != 3 }}"> 
+                      <li><a href="#">Create Product</a></li>                  
+                    </check>
+                  </ul>
+                </li>
+                <li class="dropdown">
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="#">Brands
+                  <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">List Brands</a></li>
+                    <check if="{{ @role != 3 }}"> 
+                      <li><a href="#">Create Brand</a></li>                  
+                    </check>
+                  </ul>
+                </li>
+                <li class="dropdown">
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="#">PackInfos
+                  <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">List PackInfos</a></li>
+                    <check if="{{ @role != 3 }}"> 
+                      <li><a href="#">Create PackInfo</a></li>                  
+                    </check>
+                  </ul>
+                </li>
+              </ul>
+            </check>
+            <ul class="nav navbar-nav navbar-right">              
+              <check if="{{ @page_head == 'Login' }}">
+                <li><a href="{{ @BASE.'/login' }}"><span class="glyphicon glyphicon-log-out"></span> Login</a></li>
+              </check>
+              <check if="{{ @page_head != 'Login' }}">
+                <li><a href="{{ @BASE.'/logout' }}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+              </check>
             </ul>
           </div>
         </nav>
