--- a/app/views/user/create.htm
+++ b/app/views/user/create.htm
@@ -1,32 +1,44 @@
-<form action="{{ @BASE.'/user/create' }}" method="post" class="form-horizontal">
-
-    <div class="input-prepend">
-        <span class="add-on"><i class="icon-user icon-black"></i> Name</span>
-        <input type="text" id="name" name="name" value="" class="input-xlarge" />
+<form action="{{ @BASE.'/user/create' }}" method="post"  class="form-horizontal">
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="username">Username:</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="username" name="username" value="">
     </div>
-    <br/><br/>
-
-    <div class="input-prepend">
-        <span class="add-on"><i class="icon-envelope icon-black"></i> Email</span>
-        <input type="text" id="email" name="email" value="" class="input-xlarge" />
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="password">Password:</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="password" name="password" value="">
     </div>
-    <br/><br/>
-
-    <div class="input-prepend">
-        <span class="add-on"><i class="icon-headphones icon-black"></i> Mobile</span>
-        <input type="text" id="mobile" name="mobile" value="" class="input-xlarge" />
-    </div><br/><br/>
-
-    <div class="input-prepend">
-        <span class="add-on add-on-area "><i class="icon-home icon-black"></i> Address</span>
-        <textarea row="5" id="address" name="address" class="input-xlarge"></textarea>
-    </div><br/><br/>
-
-    <div class="control-group">
-        <div class="">
-            <input type="hidden" name="create" value="create" />
-            <button type="submit" class="btn btn-primary"><i class="icon-ok icon-white"></i> Add User</button>
-        </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="role">Role:</label>
+    <div class="col-sm-10"> 
+      <select class="form-control" id="role" name="role">
+        <repeat group="{{ @roles }}" key="{{ @key }}" value="{{ @role }}">
+             <option value="{{ @key }}" {{ (@key ==2)?'selected="selected"':'' }}>
+               {{ @role }}
+             </option>
+        </repeat>        
+      </select>      
     </div>
-
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="role">Status:</label>
+    <div class="col-sm-10">        
+      <select class="form-control" id="status" name="status">
+        <repeat group="{{ @statuses }}" key="{{ @key }}" value="{{ @status }}">
+             <option value="{{ @key }}" {{ (@key == 1)?'selected="selected"':'' }}>
+               {{ @status }}
+             </option>
+        </repeat>        
+      </select>            
+    </div>
+  </div>  
+  <div class="form-group"> 
+    <div class="col-sm-offset-2 col-sm-10">       
+       <input type="hidden" name="create" value="create" />
+       <button type="submit" class="btn btn-default">Add User</button>
+    </div>
+  </div>
 </form>
