--- a/ui/css/upc.css
+++ b/ui/css/upc.css
@@ -23,6 +23,19 @@ background-color: # eee;
     background-color: #286090;
 }
 
+.navbar-nav.sub-nav>li>a {    
+    margin-right: 15px;
+    margin-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+
+.navbar-nav.sub-nav>li>a:focus, .navbar-nav.sub-nav>li>a:hover {
+    color: #fff;
+    background-color: #286090;    
+}
+
 .navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
     color: #fff;
     background-color: #286090;
@@ -44,12 +57,15 @@ margin: 60px 0;
 
 /* Main marketing message and sign up button */
 .container .jumbotron {
-margin: 20px 0;
-text-align: center;
+/*margin: 20px 0;*/
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 .container .jumbotron h1 {
-font-size: 100px;
-line-height: 1;
+  font-size: 30px;
+  line-height: 1;
+  margin-top: 10px;
 }
 .container .jumbotron .lead {
 font-size: 24px;
