--- a/app/views/brand/update.htm
+++ b/app/views/brand/update.htm
@@ -21,7 +21,8 @@
     <div class="col-sm-offset-2 col-sm-10">
        <input type="hidden" name="id" value="{{ @POST.id }}" />
        <input type="hidden" name="update" value="update" />
-       <button type="submit" class="btn btn-default">Update</button>
+       <a href="{{ @BASE.'/brands' }}" class="btn btn-primary">Back To List</a>
+       <button type="submit" class="btn btn-primary pull-right">Update</button>
     </div>
   </div>
 </form>
