--- a/app/views/brand/create.htm
+++ b/app/views/brand/create.htm
@@ -20,7 +20,8 @@
   <div class="form-group"> 
     <div class="col-sm-offset-2 col-sm-10">       
        <input type="hidden" name="create" value="create" />
-       <button type="submit" class="btn btn-default">Add Brand</button>
+       <a href="{{ @BASE.'/brands' }}" class="btn btn-primary">Back To List</a>
+       <button type="submit" class="btn btn-primary pull-right">Add Brand</button>
     </div>
   </div>
 </form>
