--- a/app/views/header.htm
+++ b/app/views/header.htm
@@ -3,11 +3,13 @@
     <head>
         <base href="{{ @BASE.'/'.@UI }}" />        
         <title>{{ @site }}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Bootstrap -->
-        <!-- <link href="../../ui/css/bootstrap.min.css" rel="stylesheet" media="screen"> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">        
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../ui/css/bootstrap-table.css">
         <link href="../../ui/css/upc.css" rel="stylesheet" media="screen">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>    
+        <script src="../../ui/js/bootstrap-table.js"></script>
     </head>
 
     <body>
@@ -18,8 +20,8 @@
             </div>
             <check if="{{ @page_head != 'Login' }}">
               <ul class="nav navbar-nav">                  
-                <li class="active"><a href="{{ @BASE.'/itmes' }}">Items</a></li> 
-                <li><a href="{{ @BASE.'/brands' }}">Brands</a></li>    
+                <li><a href="{{ @BASE.'/itmes' }}">Items</a></li> 
+                <li <check if="{{ @menu == 'brand' }}">class="active"</check>><a href="{{ @BASE.'/brands' }}">Brands</a></li>    
                 <li><a href="{{ @BASE.'/item-number-extensions' }}">Item Number extensions</a></li>    
                 <li><a href="{{ @BASE.'/art-work-languages' }}">Art Work Languages</a></li>   
                 <check if="{{ @role == 0 }}">                              
