--- a/ui/css/upc.css
+++ b/ui/css/upc.css
@@ -23,11 +23,15 @@ background-color: # eee;
     background-color: #286090;
 }
 
+.navbar-nav.sub-nav{
+  margin-top: 12px;
+}
+
 .navbar-nav.sub-nav>li>a {    
-    margin-right: 15px;
-    margin-bottom: 15px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: small;
 }
 
 
@@ -178,3 +182,4 @@ input[type="text"] {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
