--- a/app/views/user/login.htm
+++ b/app/views/user/login.htm
@@ -1,8 +1,8 @@
 <form class="form-signin" method="POST" action="{{ @BASE.'/authenticate' }}">
     <h2 class="form-signin-heading">Please sign in</h2>
-    <label for="inputUsername" class="sr-only">Username</label>
-    <input type="text" id="inputUsername" name="username" class="form-control" placeholder="Username" required="" autofocus="">
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required="">
+    <label for="username" class="sr-only">Username</label>
+    <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="" value="">
+    <label for="password" class="sr-only">Password</label>
+    <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="" value="">
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 </form>
