--- a/app/views/user/create.htm
+++ b/app/views/user/create.htm
@@ -2,13 +2,13 @@
   <div class="form-group">
     <label class="control-label col-sm-2" for="username">Username:</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="username" name="username" value="">
+      <input type="text" class="form-control" id="username" name="username" >
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="password">Password:</label>
     <div class="col-sm-10">
-      <input type="password" class="form-control" id="password" name="password" value="">
+      <input type="password" class="form-control" id="password" name="password" >
     </div>
   </div>
   <div class="form-group">
@@ -38,7 +38,8 @@
   <div class="form-group"> 
     <div class="col-sm-offset-2 col-sm-10">       
        <input type="hidden" name="create" value="create" />
-       <button type="submit" class="btn btn-default">Add User</button>
+       <a href="{{ @BASE.'/users' }}" class="btn btn-primary">Back To List</a>
+       <button type="submit" class="btn btn-primary pull-right">Add User</button>
     </div>
   </div>
 </form>
