--- a/app/views/user/update.htm
+++ b/app/views/user/update.htm
@@ -4,7 +4,7 @@
     <div class="col-sm-10">
       <input type="text" class="form-control" id="username" name="username" value="{{ @POST.username }}">
     </div>
-  </div>
+  </div>  
   <div class="form-group">
     <label class="control-label col-sm-2" for="role">Role:</label>
     <div class="col-sm-10"> 
@@ -33,7 +33,10 @@
     <div class="col-sm-offset-2 col-sm-10">
        <input type="hidden" name="id" value="{{ @POST.id }}" />
        <input type="hidden" name="update" value="update" />
-       <button type="submit" class="btn btn-default">Update</button>
+       <a href="{{ @BASE.'/users' }}" class="btn btn-primary">Back To List</a>&nbsp;
+       <a href="{{ @BASE.'/user/reset/'. @POST.id }}" class="btn btn-primary">Reset Password</a>
+       <button type="submit" class="btn btn-primary pull-right">Update</button>
     </div>
   </div>
 </form>
+
