--- a/app/views/brand/create.htm
+++ b/app/views/brand/create.htm
@@ -1,10 +1,16 @@
 <form action="{{ @BASE.'/brand/create' }}" method="post"  class="form-horizontal">
   <div class="form-group">
-    <label class="control-label col-sm-2" for="brand">Brand:</label>
+    <label class="control-label col-sm-2" for="code">Code:</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="brand" name="brand" value="">
+      <input type="text" class="form-control" id="code" name="code" value="">
     </div>
   </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="name">Name:</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="name" name="name" value="">
+    </div>
+  </div>  
   <div class="form-group">
     <label class="control-label col-sm-2" for="prefix">Prefix:</label>
     <div class="col-sm-10">
@@ -12,9 +18,9 @@
     </div>
   </div>
   <div class="form-group">
-    <label class="control-label col-sm-2" for="lastnumber">Last Used Number:</label>
+    <label class="control-label col-sm-2" for="new_item_number">New Item Number:</label>
     <div class="col-sm-10"> 
-       <input type="text" class="form-control" id="lastnumber" name="lastnumber" value="">
+       <input type="text" class="form-control" id="new_item_number" name="new_item_number" value="">
     </div>
   </div>  
   <div class="form-group"> 
