--- a/app/views/brand/list.htm
+++ b/app/views/brand/list.htm
@@ -10,9 +10,10 @@
        class="table table-striped">
     <thead>    
     <tr class="row">
-            <th data-field="brand"  data-sortable="true"  class="col-sm-5">Brand</th>        
+            <th data-field="code"  data-sortable="true"  class="col-sm-2">Code</th>  
+            <th data-field="name"  data-sortable="true"  class="col-sm-3">Name</th>        
             <th data-field="prefix"  data-sortable="true" class="col-sm-2">Prefix</th>
-            <th data-field="lastnumber"  data-sortable="true" class="col-sm-2">Last Used Number</th>
+            <th data-field="new_item_number"  data-sortable="true" class="col-sm-2">New Item Number</th>
             <check  if="{{ @role != 2 }}" class="col-sm-3">
                 <th>Action</th>
             </check>
@@ -21,9 +22,10 @@
     <tbody>
         <repeat group="{{ @brands }}" value="{{ @brand }}">
             <tr>
-                <td>{{ trim(@brand.brand) }}</td>            
+                <td>{{ trim(@brand.code) }}</td> 
+                <td>{{ trim(@brand.name) }}</td>            
                 <td>{{ trim(@brand.prefix) }}</td>
-                <td>{{ trim(@brand.lastnumber) }}</td>
+                <td>{{ trim(@brand.new_item_number) }}</td>
                 <check  if="{{ @role != 2 }}">
                     <td>
                         <a href="{{ @BASE.'/brand/update/'. @brand.id }}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>&nbsp; Edit</a>
