--- a/app/views/brand/update.htm
+++ b/app/views/brand/update.htm
@@ -1,8 +1,14 @@
 <form action="{{ @BASE.'/brand/update' }}" method="post"  class="form-horizontal">
   <div class="form-group">
-    <label class="control-label col-sm-2" for="brand">Brand:</label>
+    <label class="control-label col-sm-2" for="code">Code:</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="brand" name="brand" value="{{ @POST.brand }}">
+      <input type="text" class="form-control" id="code" name="code" value="{{ @POST.code }}">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="name">Name:</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="name" name="name" value="{{ @POST.name }}">
     </div>
   </div>
   <div class="form-group">
@@ -12,9 +18,9 @@
     </div>
   </div>
   <div class="form-group">
-    <label class="control-label col-sm-2" for="lastnumber">Last Used Number:</label>
+    <label class="control-label col-sm-2" for="new_item_number">Last Used Number:</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="lastnumber" name="lastnumber" value="{{ @POST.lastnumber }}">
+      <input type="text" class="form-control" id="new_item_number" name="new_item_number" value="{{ @POST.new_item_number }}">
     </div>
   </div>
   <div class="form-group"> 
