--- a/app/views/header.htm
+++ b/app/views/header.htm
@@ -19,8 +19,8 @@
               <ul class="nav navbar-nav">                  
                 <li><a href="{{ @BASE.'/itmes' }}">Items</a></li> 
                 <li <check if="{{ @menu == 'brand' }}">class="active"</check>><a href="{{ @BASE.'/brands' }}">Brands</a></li>    
-                <li><a href="{{ @BASE.'/item-number-extensions' }}">Item Number extensions</a></li>    
-                <li><a href="{{ @BASE.'/art-work-languages' }}">Art Work Languages</a></li>   
+                <li <check if="{{ @menu == 'extension' }}">class="active"</check>><a href="{{ @BASE.'/extensions' }}">Item Number extensions</a></li>    
+                <li <check if="{{ @menu == 'language' }}">class="active"</check>><a href="{{ @BASE.'/languages' }}">Art Work Languages</a></li>   
                 <check if="{{ @role == 0 }}">  
                   <li <check if="{{ @menu == 'user' }}">class="active"</check>><a href="{{ @BASE.'/users' }}">Users</a></li>                               
                   <!-- <li class="dropdown">
