--- a/app/views/language/list.htm
+++ b/app/views/language/list.htm
@@ -18,7 +18,7 @@
         </tr>
     </thead>
     <tbody>
-        <repeat group="{{ @languagess }}" value="{{ @languages }}">
+        <repeat group="{{ @languages }}" value="{{ @language }}">
             <tr>
                 <td>{{ trim(@language.language) }}</td> 
                 <td>{{ trim(@language.description) }}</td>
