--- a/app/views/extension/list.htm
+++ b/app/views/extension/list.htm
@@ -11,7 +11,7 @@
     <thead>    
     <tr class="row">
             <th data-field="extension"  data-sortable="true"  class="col-sm-4">Extension</th>              
-            <th data-field="new_item_number"  data-sortable="true" class="col-sm-4">Description</th>
+            <th data-field="description"  data-sortable="true" class="col-sm-4">Description</th>
             <check  if="{{ @role != 2 }}" class="col-sm-4">
                 <th>Action</th>
             </check>
