--- a/app/views/header.htm
+++ b/app/views/header.htm
@@ -17,7 +17,7 @@
             </div>
             <check if="{{ @page_head != 'Login' }}">
               <ul class="nav navbar-nav">                  
-                <li><a href="{{ @BASE.'/itmes' }}">Items</a></li> 
+                <li><a href="{{ @BASE.'/items' }}">Items</a></li> 
                 <li <check if="{{ @menu == 'brand' }}">class="active"</check>><a href="{{ @BASE.'/brands' }}">Brands</a></li>    
                 <li <check if="{{ @menu == 'extension' }}">class="active"</check>><a href="{{ @BASE.'/extensions' }}">Item Number extensions</a></li>    
                 <li <check if="{{ @menu == 'language' }}">class="active"</check>><a href="{{ @BASE.'/languages' }}">Art Work Languages</a></li>   
