--- a/app/views/item/list.htm
+++ b/app/views/item/list.htm
@@ -4,10 +4,14 @@
   </check>
 </ul>
 <table data-toggle="table"       
-       data-query-params="queryParams"
+      
        data-pagination="true"
        data-search="true"       
-       class="table table-striped">
+       class="table table-striped"
+       data-url="{{ @BASE.'/items/data'}}"       
+       data-side-pagination="server"       
+       data-page-list="[5, 10, 20, 50, 100, 200]"       
+       >
     <thead>    
     <tr class="row">
             <th data-field="upc"  data-sortable="true"  class="col-sm-2">UPC</th>              
@@ -15,11 +19,11 @@
             <th data-field="barcode"  data-sortable="true"  class="col-sm-2">Barcode</th>         
             <th data-field="createdate"  data-sortable="true"  class="col-sm-2">Created Date</th>         
             <check  if="{{ @role != 2 }}" class="col-sm-2">
-                <th>Action</th>
+                <th data-formatter="operateFormatter">Action</th>
             </check>
         </tr>
     </thead>
-    <tbody>
+    <!-- <tbody>
         <repeat group="{{ @items }}" value="{{ @item }}">
             <tr>
                 <td>{{ trim(@item.upc) }}</td>                 
@@ -35,7 +39,26 @@
                 </check>
             </tr>
         </repeat>        
-    </tbody>
+    </tbody> -->
 </table>
+
+    <!-- <table
+           data-toggle="table"
+           data-url="{{ @BASE.'/data.php'}}"
+           data-height="400"
+           data-side-pagination="server"
+           data-pagination="true"
+           data-page-list="[5, 10, 20, 50, 100, 200]"
+           data-search="true">
+        <thead>
+        <tr>
+            <th data-field="state" data-checkbox="true"></th>
+            <th data-field="id"  data-sortable="true" >ID</th>
+            <th data-field="name">Item Name</th>
+            <th data-field="price">Item Price</th>
+        </tr>
+        </thead>
+    </table> -->
+
 
 
