--- a/app/views/item/list.htm
+++ b/app/views/item/list.htm
@@ -10,7 +10,7 @@
        class="table table-striped"
        data-url="{{ @BASE.'/items/data'}}"       
        data-side-pagination="server"       
-       data-page-list="[5, 10, 20, 50, 100, 200]"       
+       data-page-list="[10, 20, 50, 100]"       
        >
     <thead>    
     <tr class="row">
