fix password button

--- a/app/views/user/password.htm
+++ b/app/views/user/password.htm
@@ -33,7 +33,7 @@
     <div class="col-sm-offset-2 col-sm-10">
        <input type="hidden" name="id" value="{{ @POST.id }}" />
        <input type="hidden" name="password" value="password" />
-       <a href="{{ @BASE.'/users' }}" class="btn btn-primary">Back To List</a>&nbsp;       
+       <a href="{{ @BASE.'/items' }}" class="btn btn-primary">Back To Item List</a>&nbsp;       
        <button type="submit" class="btn btn-primary pull-right">Change Password</button>
     </div>
   </div>
