--- a/app/views/brand/create.htm
+++ b/app/views/brand/create.htm
@@ -18,9 +18,21 @@
     </div>
   </div>
   <div class="form-group">
-    <label class="control-label col-sm-2" for="new_item_number">New Item Number:</label>
+    <label class="control-label col-sm-2" for="new_number">New Number:</label>
     <div class="col-sm-10"> 
-       <input type="text" class="form-control" id="new_item_number" name="new_item_number" value="">
+       <input type="text" class="form-control" id="new_number" name="new_number" value="">
+    </div>
+  </div>  
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="first_number">First Number:</label>
+    <div class="col-sm-10"> 
+       <input type="text" class="form-control" id="first_number" name="first_number" value="">
+    </div>
+  </div>  
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="last_number">Last Number:</label>
+    <div class="col-sm-10"> 
+       <input type="text" class="form-control" id="last_number" name="last_number" value="">
     </div>
   </div>  
   <div class="form-group"> 
