--- a/app/views/brand/update.htm
+++ b/app/views/brand/update.htm
@@ -17,12 +17,25 @@
       <input type="text" class="form-control" id="prefix" name="prefix" value="{{ @POST.prefix }}">
     </div>
   </div>
+  
   <div class="form-group">
-    <label class="control-label col-sm-2" for="new_item_number">Last Used Number:</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="new_item_number" name="new_item_number" value="{{ @POST.new_item_number }}">
+    <label class="control-label col-sm-2" for="new_number">New Number:</label>
+    <div class="col-sm-10"> 
+       <input type="text" class="form-control" id="new_number" name="new_number" value="{{ @POST.new_number }}">
     </div>
-  </div>
+  </div>  
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="first_number">First Number:</label>
+    <div class="col-sm-10"> 
+       <input type="text" class="form-control" id="first_number" name="first_number" value="{{ @POST.first_number }}">
+    </div>
+  </div>  
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="last_number">Last Number:</label>
+    <div class="col-sm-10"> 
+       <input type="text" class="form-control" id="last_number" name="last_number" value="{{ @POST.last_number }}">
+    </div>
+  </div>    
   <div class="form-group"> 
     <div class="col-sm-offset-2 col-sm-10">
        <input type="hidden" name="id" value="{{ @POST.id }}" />
