--- a/app/views/item/create.htm
+++ b/app/views/item/create.htm
@@ -1,8 +1,8 @@
-<form action="{{ @BASE.'/language/create' }}" method="post"  class="form-horizontal">
+<form action="{{ @BASE.'/item/create' }}" method="post"  class="form-horizontal">
   <div class="form-group">
-    <label class="control-label col-sm-2" for="language">Language:</label>
+    <label class="control-label col-sm-2" for="code">Item Code:</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="language" name="language" value="">
+      <input type="text" class="form-control" id="code" name="code" value="">
     </div>
   </div>
   <div class="form-group">
@@ -10,12 +10,24 @@
     <div class="col-sm-10">
       <input type="text" class="form-control" id="description" name="description" value="">
     </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="barcode">Barcode:</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="barcode" name="barcode" value="">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="upc">Created Date:</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="createdate" name="createdate" value="">
+    </div>
   </div>    
   <div class="form-group"> 
     <div class="col-sm-offset-2 col-sm-10">       
        <input type="hidden" name="create" value="create" />
-       <a href="{{ @BASE.'/languages' }}" class="btn btn-primary">Back To List</a>
-       <button type="submit" class="btn btn-primary pull-right">Add Language</button>
+       <a href="{{ @BASE.'/items' }}" class="btn btn-primary">Back To List</a>
+       <button type="submit" class="btn btn-primary pull-right">Add Item</button>
     </div>
   </div>
 </form>
