--- a/app/views/item/list.htm
+++ b/app/views/item/list.htm
@@ -9,8 +9,9 @@
        data-search="true"       
        class="table table-striped"
        data-url="{{ @BASE.'/items/data'}}"       
-       data-side-pagination="server"       
-       data-page-list="[10, 20, 50, 100]"       
+       data-side-pagination="server" 
+       data-page-size="50"      
+       data-page-list="[50, 100]"       
        >
     <thead>    
     <tr class="row">
