--- a/app/views/brand/list.htm
+++ b/app/views/brand/list.htm
@@ -7,16 +7,18 @@
        data-query-params="queryParams"
        data-pagination="true"
        data-search="true"       
-       class="table table-striped">
+       class="table table-striped" 
+       data-page-size="50"      
+       data-page-list="[50, 100]">
     <thead>    
     <tr class="row">
-            <th data-field="code"  data-sortable="true"  class="col-sm-1">Code</th>  
-            <th data-field="name"  data-sortable="true"  class="col-sm-2">Name</th>        
-            <th data-field="prefix"  data-sortable="true" class="col-sm-1">Prefix</th>
-            <th data-field="new_number"  data-sortable="true" class="col-sm-1">New Number</th>
-            <th data-field="first_number"  data-sortable="true" class="col-sm-1">First Number</th>
-            <th data-field="last_number"  data-sortable="true" class="col-sm-1">Last Number</th>
-            <check  if="{{ @role != 2 }}" class="col-sm-5">
+            <th data-field="code"  data-sortable="true"  class="col-sm-2">Code</th>  
+            <th data-field="name"  data-sortable="true"  class="col-sm-3">Name</th>        
+            <th data-field="prefix"  data-sortable="true" class="col-sm-2">Prefix</th>
+            <th data-field="new_number"  data-sortable="true" class="col-sm-2">New Number</th>
+            <!-- <th data-field="first_number"  data-sortable="true" class="col-sm-1">First Number</th>
+            <th data-field="last_number"  data-sortable="true" class="col-sm-1">Last Number</th> -->
+            <check  if="{{ @role != 2 }}" class="col-sm-3">
                 <th>Action</th>
             </check>
         </tr>
@@ -28,8 +30,8 @@
                 <td>{{ trim(@brand.name) }}</td>            
                 <td>{{ trim(@brand.prefix) }}</td>
                 <td>{{ trim(@brand.new_number) }}</td>
-                <td>{{ trim(@brand.first_number) }}</td>
-                <td>{{ trim(@brand.last_number) }}</td>
+                <!-- <td>{{ trim(@brand.first_number) }}</td>
+                <td>{{ trim(@brand.last_number) }}</td> -->
                 <check  if="{{ @role != 2 }}">
                     <td>
                         <a href="{{ @BASE.'/brand/update/'. @brand.id }}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>&nbsp; Edit</a>
