--- a/app/views/language/list.htm
+++ b/app/views/language/list.htm
@@ -7,7 +7,9 @@
        data-query-params="queryParams"
        data-pagination="true"
        data-search="true"       
-       class="table table-striped">
+       class="table table-striped" 
+       data-page-size="50"      
+       data-page-list="[50, 100]">
     <thead>    
     <tr class="row">
             <th data-field="language"  data-sortable="true"  class="col-sm-4">Language</th>              
