--- a/app/views/item/list.htm
+++ b/app/views/item/list.htm
@@ -3,7 +3,7 @@
     <li><a href="{{ @BASE.'/item/create' }}" class="btn btn-primary"><i class="icon-edit icon-white"></i>Create</a></li>  
   </check>
 </ul>
-<table data-toggle="table"       
+<table id="item-table" data-toggle="table"       
       
        data-pagination="true"
        data-search="true"       
@@ -26,9 +26,3 @@
         </tr>
     </thead>    
 </table>
-<button id="test">test</button>
-
-   
-
-
-
